# WinClip

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: io.github.prathamps.WinClip.desktop  winclip.service
docs/: ARCHITECTURE.md  PACKAGING.md
scripts/: build-deb.sh  install.sh  uninstall.sh
scripts/git-hooks/: post-commit  pre-commit
src/winclip/: __init__.py  __main__.py  bootstrap.py
src/winclip/adapters/: __init__.py
src/winclip/adapters/driven/: __init__.py  clipboard_writers.py  json_settings.py  paste_injector.py  shell_history.py  sqlite_history.py  system.py
src/winclip/adapters/driving/: __init__.py  cli.py
src/winclip/adapters/driving/gtk/: __init__.py  app.py  humanize.py  pages.py  preferences.py  rows.py  window.py
src/winclip/adapters/driving/monitor/: __init__.py  wayland.py  x11.py
src/winclip/application/: __init__.py  use_cases.py
src/winclip/application/ports/: __init__.py  driven.py  driving.py
src/winclip/catalog/: __init__.py  emoji.py  kaomoji.py  symbols.py
src/winclip/domain/: __init__.py  commands.py  errors.py  models.py  policy.py
tests/: conftest.py
tests/integration/: test_json_settings.py  test_shell_history.py  test_sqlite_repository.py
tests/unit/: test_architecture.py  test_catalogs.py
tests/unit/application/: test_activate.py  test_capture.py  test_query_and_manage.py  test_snippets_and_commands.py
tests/unit/domain/: test_commands.py  test_models.py  test_policy.py
