[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "winclip"
version = "0.2.0"
description = "A Windows-style clipboard history (Win+V) for Linux"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Pratham P S" }]
requires-python = ">=3.10"
keywords = ["clipboard", "clipboard-manager", "wayland", "x11", "gtk", "win-v"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
]
# Runtime dependencies are deliberately empty: WinClip uses only the
# Python standard library plus the system-provided PyGObject (GTK 3)
# and wl-clipboard, which are installed with apt — see README.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/prathamps/WinClip"
Issues = "https://github.com/prathamps/WinClip/issues"

[project.scripts]
winclip = "winclip.adapters.driving.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 90
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E402", # GTK modules require gi.require_version before imports
]
